--- a/Drzik_NS2021.ipynb
+++ b/Drzik_NS2021.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Držík: Klasifikácia zdravia ľudského plodu na základe údajov CTG"
+    "# Držík: Klasifikácia zdravia ľudského plodu na základe údajov z CTG"
    ]
   },
   {
@@ -476,7 +476,8 @@
     }
    ],
    "source": [
-    "# Obsah premennej data si necháme vypísať. Zistíme, že dataset obsahuje 2126 riadkov (záznamov) a 22 stĺpcov (charakteristík).\n",
+    "# Obsah premennej data si necháme vypísať. Zistíme, že dataset obsahuje 2126 riadkov (záznamov) a 22 stĺpcov \n",
+    "#(21 charakteristík + 1 výsledný zdravotný stav, kategória ).\n",
     "data"
    ]
   },
@@ -2531,13 +2532,7 @@
       "54/54 [==============================] - 0s 1ms/step - loss: 0.1659 - accuracy: 0.9354 - val_loss: 0.2496 - val_accuracy: 0.9319\n",
       "Epoch 58/90\n",
       "54/54 [==============================] - 0s 1ms/step - loss: 0.1380 - accuracy: 0.9379 - val_loss: 0.2492 - val_accuracy: 0.9272\n",
-      "Epoch 59/90\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 59/90\n",
       "54/54 [==============================] - 0s 1ms/step - loss: 0.1273 - accuracy: 0.9474 - val_loss: 0.2495 - val_accuracy: 0.9319\n",
       "Epoch 60/90\n",
       "54/54 [==============================] - 0s 1ms/step - loss: 0.1202 - accuracy: 0.9519 - val_loss: 0.2487 - val_accuracy: 0.9249\n",
@@ -2805,7 +2800,7 @@
    "source": [
     "Vygenerevali sme si aj <b>confusion matrix</b> o veľkosti 3 x 3, ktorá nám pomôže s hodnotením správnosti klasifikácie modelu. Matica porovnáva skutočné cieľové hodnoty (Y_test) s tými, ktoré predpovedá natrénovaná neurónová sieť. Na tejto matici môžeme vidieť, že plod bude zaklasifikovaný ako Normal určila neurónová sieť 318 krát správne z 332 prípadov. Avšak určila aj nesprávne, že 11 krát stav Normal zaklasifikovala ako Suspect a 3 krát ako Pathological. \n",
     "\n",
-    "Potom 46 prípadov určených správne ako Suspect a takisto správne aj 30 v kategógií Pathological."
+    "Potom 46 prípadov určených správne ako Suspect a takisto správne aj 30 v kategórií Pathological."
    ]
   },
   {
