--- a/Drzik_NS2021.ipynb
+++ b/Drzik_NS2021.ipynb
@@ -2386,6 +2386,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"model.png\" width=500 height=500 />"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
